y.output

state 0
	$accept: .file $end 
	opt_package: .    (3)

	PACKAGE  shift 4
	.  reduce 3 (src line 97)

	file  goto 1
	program  goto 2
	opt_package  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  program.    (1)

	.  reduce 1 (src line 81)


state 3
	program:  opt_package.opt_newlines decl_list opt_newlines 
	opt_newlines: .    (5)

	.  reduce 5 (src line 107)

	opt_newlines  goto 5

state 4
	opt_package:  PACKAGE.IDENT 

	IDENT  shift 6
	.  error


5: shift/reduce conflict (shift 8(0), red'n 7(0)) on NEWLINE
state 5
	program:  opt_package opt_newlines.decl_list opt_newlines 
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list: .    (7)

	NEWLINE  shift 8
	.  reduce 7 (src line 112)

	decl_list  goto 7

state 6
	opt_package:  PACKAGE IDENT.    (4)

	.  reduce 4 (src line 99)


state 7
	program:  opt_package opt_newlines decl_list.opt_newlines 
	decl_list:  decl_list.opt_newlines decl 
	opt_newlines: .    (5)

	.  reduce 5 (src line 107)

	opt_newlines  goto 9

state 8
	opt_newlines:  opt_newlines NEWLINE.    (6)

	.  reduce 6 (src line 109)


state 9
	program:  opt_package opt_newlines decl_list opt_newlines.    (2)
	opt_newlines:  opt_newlines.NEWLINE 
	decl_list:  decl_list opt_newlines.decl 

	IMPORT  shift 19
	ENUM  shift 20
	STRUCT  shift 21
	INTERFACE  shift 22
	IMPL  shift 23
	FUNC  shift 24
	LET  shift 25
	VAR  shift 26
	NEWLINE  shift 8
	.  reduce 2 (src line 93)

	decl  goto 10
	import_decl  goto 11
	enum_decl  goto 12
	struct_decl  goto 13
	interface_decl  goto 14
	impl_decl  goto 15
	func_decl  goto 16
	let_decl  goto 17
	var_decl  goto 18

state 10
	decl_list:  decl_list opt_newlines decl.    (8)

	.  reduce 8 (src line 114)


state 11
	decl:  import_decl.    (9)

	.  reduce 9 (src line 117)


state 12
	decl:  enum_decl.    (10)

	.  reduce 10 (src line 119)


state 13
	decl:  struct_decl.    (11)

	.  reduce 11 (src line 120)


state 14
	decl:  interface_decl.    (12)

	.  reduce 12 (src line 121)


state 15
	decl:  impl_decl.    (13)

	.  reduce 13 (src line 122)


state 16
	decl:  func_decl.    (14)

	.  reduce 14 (src line 123)


state 17
	decl:  let_decl.    (15)

	.  reduce 15 (src line 124)


state 18
	decl:  var_decl.    (16)

	.  reduce 16 (src line 125)


state 19
	import_decl:  IMPORT.IDENT STRING 
	import_decl:  IMPORT.STRING 

	IDENT  shift 27
	STRING  shift 28
	.  error


state 20
	enum_decl:  ENUM.qualified_name $$19 opt_type_params $$20 enum_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 29

state 21
	struct_decl:  STRUCT.qualified_name $$29 opt_type_params $$30 opt_newlines struct_body opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 31

state 22
	interface_decl:  INTERFACE.qualified_name $$39 opt_type_params $$40 func_sig_list opt_newlines END 

	IDENT  shift 30
	.  error

	qualified_name  goto 32

state 23
	impl_decl:  IMPL.$$46 opt_impl_type_params type $$47 COLON type $$48 impl_body opt_newlines END 
	$$46: .    (46)

	.  reduce 46 (src line 360)

	$$46  goto 33

state 24
	func_decl:  FUNC.IDENT $$57 opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 

	IDENT  shift 34
	.  error


state 25
	let_decl:  LET.IDENT opt_type_annot '=' expr 

	IDENT  shift 35
	.  error


state 26
	var_decl:  VAR.IDENT opt_type_annot '=' expr 

	IDENT  shift 36
	.  error


state 27
	import_decl:  IMPORT IDENT.STRING 

	STRING  shift 37
	.  error


state 28
	import_decl:  IMPORT STRING.    (18)

	.  reduce 18 (src line 138)


state 29
	enum_decl:  ENUM qualified_name.$$19 opt_type_params $$20 enum_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$19: .    (19)

	DOT  shift 39
	.  reduce 19 (src line 148)

	$$19  goto 38

state 30
	qualified_name:  IDENT.    (91)

	.  reduce 91 (src line 644)


state 31
	struct_decl:  STRUCT qualified_name.$$29 opt_type_params $$30 opt_newlines struct_body opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$29: .    (29)

	DOT  shift 39
	.  reduce 29 (src line 226)

	$$29  goto 40

state 32
	interface_decl:  INTERFACE qualified_name.$$39 opt_type_params $$40 func_sig_list opt_newlines END 
	qualified_name:  qualified_name.DOT IDENT 
	$$39: .    (39)

	DOT  shift 39
	.  reduce 39 (src line 304)

	$$39  goto 41

state 33
	impl_decl:  IMPL $$46.opt_impl_type_params type $$47 COLON type $$48 impl_body opt_newlines END 
	opt_impl_type_params: .    (50)

	LBRACK  shift 43
	TYPELBRACK  shift 44
	.  reduce 50 (src line 404)

	opt_impl_type_params  goto 42

state 34
	func_decl:  FUNC IDENT.$$57 opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 
	$$57: .    (57)

	.  reduce 57 (src line 431)

	$$57  goto 45

state 35
	let_decl:  LET IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (62)

	COLON  shift 47
	.  reduce 62 (src line 496)

	opt_type_annot  goto 46

state 36
	var_decl:  VAR IDENT.opt_type_annot '=' expr 
	opt_type_annot: .    (62)

	COLON  shift 47
	.  reduce 62 (src line 496)

	opt_type_annot  goto 48

state 37
	import_decl:  IMPORT IDENT STRING.    (17)

	.  reduce 17 (src line 128)


state 38
	enum_decl:  ENUM qualified_name $$19.opt_type_params $$20 enum_body opt_newlines END 
	opt_type_params: .    (74)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 74 (src line 551)

	opt_type_params  goto 49

state 39
	qualified_name:  qualified_name DOT.IDENT 

	IDENT  shift 52
	.  error


state 40
	struct_decl:  STRUCT qualified_name $$29.opt_type_params $$30 opt_newlines struct_body opt_newlines END 
	opt_type_params: .    (74)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 74 (src line 551)

	opt_type_params  goto 53

state 41
	interface_decl:  INTERFACE qualified_name $$39.opt_type_params $$40 func_sig_list opt_newlines END 
	opt_type_params: .    (74)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 74 (src line 551)

	opt_type_params  goto 54

state 42
	impl_decl:  IMPL $$46 opt_impl_type_params.type $$47 COLON type $$48 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 55
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 43
	opt_impl_type_params:  LBRACK.$$51 maybe_name_list RBRACK 
	$$51: .    (51)

	.  reduce 51 (src line 406)

	$$51  goto 62

state 44
	opt_impl_type_params:  TYPELBRACK.$$53 maybe_name_list RBRACK 
	$$53: .    (53)

	.  reduce 53 (src line 415)

	$$53  goto 63

state 45
	func_decl:  FUNC IDENT $$57.opt_type_params LPAREN maybe_param_list RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 
	opt_type_params: .    (74)

	LBRACK  shift 50
	TYPELBRACK  shift 51
	.  reduce 74 (src line 551)

	opt_type_params  goto 64

state 46
	let_decl:  LET IDENT opt_type_annot.'=' expr 

	'='  shift 65
	.  error


state 47
	opt_type_annot:  COLON.type 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 66
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 48
	var_decl:  VAR IDENT opt_type_annot.'=' expr 

	'='  shift 67
	.  error


state 49
	enum_decl:  ENUM qualified_name $$19 opt_type_params.$$20 enum_body opt_newlines END 
	$$20: .    (20)

	.  reduce 20 (src line 153)

	$$20  goto 68

state 50
	opt_type_params:  LBRACK.    (75)

	.  reduce 75 (src line 553)


state 51
	opt_type_params:  TYPELBRACK.$$76 maybe_name_list RBRACK 
	$$76: .    (76)

	.  reduce 76 (src line 557)

	$$76  goto 69

state 52
	qualified_name:  qualified_name DOT IDENT.    (92)

	.  reduce 92 (src line 652)


state 53
	struct_decl:  STRUCT qualified_name $$29 opt_type_params.$$30 opt_newlines struct_body opt_newlines END 
	$$30: .    (30)

	.  reduce 30 (src line 231)

	$$30  goto 70

state 54
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params.$$40 func_sig_list opt_newlines END 
	$$40: .    (40)

	.  reduce 40 (src line 309)

	$$40  goto 71

state 55
	impl_decl:  IMPL $$46 opt_impl_type_params type.$$47 COLON type $$48 impl_body opt_newlines END 
	$$47: .    (47)

	.  reduce 47 (src line 366)

	$$47  goto 72

state 56
	type:  func_type.    (93)

	.  reduce 93 (src line 659)


state 57
	type:  grouped_type.    (94)

	.  reduce 94 (src line 664)


state 58
	type:  named_type.    (95)

	.  reduce 95 (src line 668)


state 59
	func_type:  FUNC.func_type_params_start maybe_type_list RPAREN $$96 ARROW type 

	LPAREN  shift 74
	.  error

	func_type_params_start  goto 73

state 60
	grouped_type:  LPAREN.type RPAREN 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 75
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 61
	qualified_name:  qualified_name.DOT IDENT 
	named_type:  qualified_name.named_type_suffix 
	named_type_suffix: .    (101)

	DOT  shift 39
	TYPELBRACK  shift 77
	.  reduce 101 (src line 727)

	named_type_suffix  goto 76

state 62
	opt_impl_type_params:  LBRACK $$51.maybe_name_list RBRACK 
	maybe_name_list: .    (78)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 78 (src line 564)

	qualified_name  goto 61
	type  goto 80
	maybe_name_list  goto 78
	name_list  goto 79
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 63
	opt_impl_type_params:  TYPELBRACK $$53.maybe_name_list RBRACK 
	maybe_name_list: .    (78)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 78 (src line 564)

	qualified_name  goto 61
	type  goto 80
	maybe_name_list  goto 81
	name_list  goto 79
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 64
	func_decl:  FUNC IDENT $$57 opt_type_params.LPAREN maybe_param_list RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 

	LPAREN  shift 82
	.  error


state 65
	let_decl:  LET IDENT opt_type_annot '='.expr 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 83
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 66
	opt_type_annot:  COLON type.    (63)

	.  reduce 63 (src line 498)


state 67
	var_decl:  VAR IDENT opt_type_annot '='.expr 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 111
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 68
	enum_decl:  ENUM qualified_name $$19 opt_type_params $$20.enum_body opt_newlines END 
	enum_body: .    (22)

	.  reduce 22 (src line 172)

	enum_body  goto 112

state 69
	opt_type_params:  TYPELBRACK $$76.maybe_name_list RBRACK 
	maybe_name_list: .    (78)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 78 (src line 564)

	qualified_name  goto 61
	type  goto 80
	maybe_name_list  goto 113
	name_list  goto 79
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 70
	struct_decl:  STRUCT qualified_name $$29 opt_type_params $$30.opt_newlines struct_body opt_newlines END 
	opt_newlines: .    (5)

	.  reduce 5 (src line 107)

	opt_newlines  goto 114

state 71
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params $$40.func_sig_list opt_newlines END 
	func_sig_list: .    (42)

	.  reduce 42 (src line 329)

	func_sig_list  goto 115

state 72
	impl_decl:  IMPL $$46 opt_impl_type_params type $$47.COLON type $$48 impl_body opt_newlines END 

	COLON  shift 116
	.  error


state 73
	func_type:  FUNC func_type_params_start.maybe_type_list RPAREN $$96 ARROW type 
	maybe_type_list: .    (87)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 87 (src line 622)

	qualified_name  goto 61
	type  goto 119
	maybe_type_list  goto 117
	type_list  goto 118
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 74
	func_type_params_start:  LPAREN.    (98)

	.  reduce 98 (src line 710)


state 75
	grouped_type:  LPAREN type.RPAREN 

	RPAREN  shift 120
	.  error


state 76
	named_type:  qualified_name named_type_suffix.    (100)

	.  reduce 100 (src line 723)


state 77
	named_type_suffix:  TYPELBRACK.$$102 maybe_type_list RBRACK 
	$$102: .    (102)

	.  reduce 102 (src line 736)

	$$102  goto 121

state 78
	opt_impl_type_params:  LBRACK $$51 maybe_name_list.RBRACK 

	RBRACK  shift 122
	.  error


state 79
	maybe_name_list:  name_list.    (79)
	name_list:  name_list.COMMA type 

	COMMA  shift 123
	.  reduce 79 (src line 566)


state 80
	name_list:  type.    (80)

	.  reduce 80 (src line 569)


state 81
	opt_impl_type_params:  TYPELBRACK $$53 maybe_name_list.RBRACK 

	RBRACK  shift 124
	.  error


state 82
	func_decl:  FUNC IDENT $$57 opt_type_params LPAREN.maybe_param_list RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 
	maybe_param_list: .    (82)

	IDENT  shift 128
	.  reduce 82 (src line 600)

	maybe_param_list  goto 125
	param_list  goto 126
	param  goto 127

state 83
	let_decl:  LET IDENT opt_type_annot '=' expr.    (60)

	.  reduce 60 (src line 469)


84: shift/reduce conflict (shift 129(1), red'n 104(0)) on PIPEFWD
84: shift/reduce conflict (shift 130(1), red'n 104(0)) on PIPEBACK
state 84
	expr:  pipe_expr.    (104)
	pipe_expr:  pipe_expr.PIPEFWD $$106 or_expr 
	pipe_expr:  pipe_expr.PIPEBACK $$108 or_expr 

	PIPEFWD  shift 129
	PIPEBACK  shift 130
	.  reduce 104 (src line 766)


85: shift/reduce conflict (shift 131(2), red'n 105(0)) on OROR
state 85
	pipe_expr:  or_expr.    (105)
	or_expr:  or_expr.OROR $$111 and_expr 

	OROR  shift 131
	.  reduce 105 (src line 770)


86: shift/reduce conflict (shift 132(3), red'n 110(0)) on ANDAND
state 86
	or_expr:  and_expr.    (110)
	and_expr:  and_expr.ANDAND $$114 compare_expr 

	ANDAND  shift 132
	.  reduce 110 (src line 794)


87: shift/reduce conflict (shift 133(4), red'n 113(0)) on EQEQ
87: shift/reduce conflict (shift 134(4), red'n 113(0)) on NEQ
87: shift/reduce conflict (shift 135(4), red'n 113(0)) on LTE
87: shift/reduce conflict (shift 136(4), red'n 113(0)) on GTE
87: shift/reduce conflict (shift 137(4), red'n 113(0)) on '<'
87: shift/reduce conflict (shift 138(4), red'n 113(0)) on '>'
state 87
	and_expr:  compare_expr.    (113)
	compare_expr:  compare_expr.EQEQ $$117 add_expr 
	compare_expr:  compare_expr.NEQ $$119 add_expr 
	compare_expr:  compare_expr.LTE $$121 add_expr 
	compare_expr:  compare_expr.GTE $$123 add_expr 
	compare_expr:  compare_expr.'<' $$125 add_expr 
	compare_expr:  compare_expr.'>' $$127 add_expr 

	EQEQ  shift 133
	NEQ  shift 134
	LTE  shift 135
	GTE  shift 136
	'<'  shift 137
	'>'  shift 138
	.  reduce 113 (src line 808)


88: shift/reduce conflict (shift 139(5), red'n 116(0)) on '+'
88: shift/reduce conflict (shift 140(5), red'n 116(0)) on '-'
state 88
	compare_expr:  add_expr.    (116)
	add_expr:  add_expr.'+' $$130 mul_expr 
	add_expr:  add_expr.'-' $$132 mul_expr 

	'+'  shift 139
	'-'  shift 140
	.  reduce 116 (src line 822)


89: shift/reduce conflict (shift 141(6), red'n 129(0)) on '*'
89: shift/reduce conflict (shift 142(6), red'n 129(0)) on '/'
state 89
	add_expr:  mul_expr.    (129)
	mul_expr:  mul_expr.'*' $$135 prefix_expr 
	mul_expr:  mul_expr.'/' $$137 prefix_expr 

	'*'  shift 141
	'/'  shift 142
	.  reduce 129 (src line 871)


state 90
	mul_expr:  prefix_expr.    (134)

	.  reduce 134 (src line 892)


91: shift/reduce conflict (shift 144(0), red'n 139(8)) on DOT
91: shift/reduce conflict (shift 148(0), red'n 139(8)) on LPAREN
91: shift/reduce conflict (shift 146(0), red'n 139(8)) on LBRACK
91: shift/reduce conflict (shift 147(0), red'n 139(8)) on LBRACE
91: shift/reduce conflict (shift 145(0), red'n 139(8)) on TYPELBRACK
state 91
	prefix_expr:  postfix_expr.    (139)
	postfix_expr:  postfix_expr.call_start maybe_expr_list RPAREN 
	postfix_expr:  postfix_expr.DOT IDENT 
	postfix_expr:  postfix_expr.TYPELBRACK maybe_type_list RBRACK LBRACE maybe_struct_fields RBRACE 
	postfix_expr:  postfix_expr.LBRACK $$145 maybe_type_list RBRACK LBRACE maybe_struct_fields RBRACE 
	postfix_expr:  postfix_expr.LBRACE maybe_struct_fields RBRACE 

	DOT  shift 144
	LPAREN  shift 148
	LBRACK  shift 146
	LBRACE  shift 147
	TYPELBRACK  shift 145
	.  reduce 139 (src line 913)

	call_start  goto 143

state 92
	prefix_expr:  NOT.postfix_expr 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	postfix_expr  goto 149
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 93
	postfix_expr:  primary.    (141)

	.  reduce 141 (src line 921)


state 94
	primary:  IDENT.    (148)

	.  reduce 148 (src line 979)


state 95
	primary:  NUMBER.    (149)

	.  reduce 149 (src line 984)


state 96
	primary:  STRING.    (150)

	.  reduce 150 (src line 988)


state 97
	primary:  LPAREN.expr RPAREN 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 150
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 98
	primary:  slice_lit.    (152)

	.  reduce 152 (src line 993)


state 99
	primary:  collection_lit.    (153)

	.  reduce 153 (src line 994)


state 100
	primary:  if_expr.    (154)

	.  reduce 154 (src line 995)


state 101
	primary:  switch_expr.    (155)

	.  reduce 155 (src line 996)


state 102
	primary:  while_expr.    (156)

	.  reduce 156 (src line 997)


state 103
	primary:  func_lit.    (157)

	.  reduce 157 (src line 998)


state 104
	slice_lit:  SLICE.    (158)

	.  reduce 158 (src line 1001)


state 105
	slice_lit:  LBRACK.maybe_expr_list RBRACK 
	maybe_expr_list: .    (161)

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  reduce 161 (src line 1026)

	expr  goto 153
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	maybe_expr_list  goto 151
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103
	expr_list  goto 152

state 106
	collection_lit:  LBRACE.maybe_collection_entries RBRACE 
	maybe_collection_entries: .    (172)

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  reduce 172 (src line 1088)

	expr  goto 157
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103
	maybe_collection_entries  goto 154
	collection_entries  goto 155
	collection_entry  goto 156

state 107
	if_expr:  IF.expr $$179 THEN expr $$180 ELSE expr 
	if_expr:  IF.expr $$182 ARROW expr $$183 ELSE expr 
	if_expr:  IF.expr NEWLINE $$185 opt_newlines block_expr $$186 ELSE opt_newlines block_expr opt_newlines END 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 158
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 108
	switch_expr:  SWITCH.expr $$190 opt_newlines switch_case_list opt_newlines END 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 159
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 109
	while_expr:  WHILE.expr $$188 opt_newlines block_expr opt_newlines END 

	IDENT  shift 94
	NUMBER  shift 95
	STRING  shift 96
	FUNC  shift 110
	IF  shift 107
	SWITCH  shift 108
	NOT  shift 92
	WHILE  shift 109
	LPAREN  shift 97
	LBRACK  shift 105
	LBRACE  shift 106
	SLICE  shift 104
	.  error

	expr  goto 160
	pipe_expr  goto 84
	or_expr  goto 85
	and_expr  goto 86
	compare_expr  goto 87
	add_expr  goto 88
	mul_expr  goto 89
	prefix_expr  goto 90
	postfix_expr  goto 91
	primary  goto 93
	slice_lit  goto 98
	collection_lit  goto 99
	if_expr  goto 100
	switch_expr  goto 101
	while_expr  goto 102
	func_lit  goto 103

state 110
	func_lit:  FUNC.LPAREN maybe_param_list RPAREN ARROW type opt_newlines block_expr opt_newlines END 

	LPAREN  shift 161
	.  error


state 111
	var_decl:  VAR IDENT opt_type_annot '=' expr.    (61)

	.  reduce 61 (src line 482)


state 112
	enum_decl:  ENUM qualified_name $$19 opt_type_params $$20 enum_body.opt_newlines END 
	enum_body:  enum_body.opt_newlines enum_variant 
	opt_newlines: .    (5)

	.  reduce 5 (src line 107)

	opt_newlines  goto 162

state 113
	opt_type_params:  TYPELBRACK $$76 maybe_name_list.RBRACK 

	RBRACK  shift 163
	.  error


114: shift/reduce conflict (shift 8(0), red'n 35(0)) on NEWLINE
state 114
	opt_newlines:  opt_newlines.NEWLINE 
	struct_decl:  STRUCT qualified_name $$29 opt_type_params $$30 opt_newlines.struct_body opt_newlines END 
	struct_fields: .    (35)

	NEWLINE  shift 8
	LPAREN  shift 165
	.  reduce 35 (src line 274)

	struct_body  goto 164
	struct_fields  goto 166

state 115
	interface_decl:  INTERFACE qualified_name $$39 opt_type_params $$40 func_sig_list.opt_newlines END 
	func_sig_list:  func_sig_list.opt_newlines func_sig 
	opt_newlines: .    (5)

	.  reduce 5 (src line 107)

	opt_newlines  goto 167

state 116
	impl_decl:  IMPL $$46 opt_impl_type_params type $$47 COLON.type $$48 impl_body opt_newlines END 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 168
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 117
	func_type:  FUNC func_type_params_start maybe_type_list.RPAREN $$96 ARROW type 

	RPAREN  shift 169
	.  error


state 118
	maybe_type_list:  type_list.    (88)
	type_list:  type_list.COMMA type 

	COMMA  shift 170
	.  reduce 88 (src line 624)


state 119
	type_list:  type.    (89)

	.  reduce 89 (src line 627)


state 120
	grouped_type:  LPAREN type RPAREN.    (99)

	.  reduce 99 (src line 719)


state 121
	named_type_suffix:  TYPELBRACK $$102.maybe_type_list RBRACK 
	maybe_type_list: .    (87)

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  reduce 87 (src line 622)

	qualified_name  goto 61
	type  goto 119
	maybe_type_list  goto 171
	type_list  goto 118
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 122
	opt_impl_type_params:  LBRACK $$51 maybe_name_list RBRACK.    (52)

	.  reduce 52 (src line 411)


state 123
	name_list:  name_list COMMA.type 

	IDENT  shift 30
	FUNC  shift 59
	LPAREN  shift 60
	.  error

	qualified_name  goto 61
	type  goto 172
	func_type  goto 56
	grouped_type  goto 57
	named_type  goto 58

state 124
	opt_impl_type_params:  TYPELBRACK $$53 maybe_name_list RBRACK.    (54)

	.  reduce 54 (src line 420)


state 125
	func_decl:  FUNC IDENT $$57 opt_type_params LPAREN maybe_param_list.RPAREN ARROW type opt_using_clause $$58 opt_newlines block_expr opt_newlines END 

	RPAREN  shift 173
	.  error


state 126
	maybe_param_list:  param_list.    (83)
	param_list:  param_list.COMMA param 

	COMMA  shift 174
	.  reduce 83 (src line 602)


state 127
	param_list:  param.    (84)

	.  reduce 84 (src line 605)


state 128
	param:  IDENT.COLON type 

	COLON  shift 175
	.  error


state 129
	pipe_expr:  pipe_expr PIPEFWD.$$106 or_expr 
	$$106: .    (106)

	.  reduce 106 (src line 776)

	$$106  goto 176

state 130
	pipe_expr:  pipe_expr PIPEBACK.$$108 or_expr 
	$$108: .    (108)

	.  reduce 108 (src line 784)

	$$108  goto 177

state 131
	or_expr:  or_expr OROR.$$111 and_expr 
	$$111: .    (111)

	.  reduce 111 (src line 799)

	$$111  goto 178

state 132
	and_expr:  and_expr ANDAND.$$114 compare_expr 
	$$114: .    (114)

	.  reduce 114 (src line 813)

	$$114  goto 179

state 133
	compare_expr:  compare_expr EQEQ.$$117 add_expr 
	$$117: .    (117)

	.  reduce 117 (src line 827)

	$$117  goto 180

state 134
	compare_expr:  compare_expr NEQ.$$119 add_expr 
	$$119: .    (119)

	.  reduce 119 (src line 834)

	$$119  goto 181

state 135
	compare_expr:  compare_expr LTE.$$121 add_expr 
	$$121: .    (121)

	.  reduce 121 (src line 841)

	$$121  goto 182

state 136
	compare_expr:  compare_expr GTE.$$123 add_expr 
	$$123: .    (123)

	.  reduce 123 (src line 848)

	$$123  goto 183

state 137
	compare_expr:  compare_expr '<'.$$125 add_expr 
	$$125: .    (125)

	.  reduce 125 (src line 855)

	$$125  goto 184

state 138
	compare_expr:  compare_expr '>'.$$127 add_expr 
	$$127: .    (127)

	.  reduce 127 (src line 862)

	$$127  goto 185

state 139
	add_expr:  add_expr '+'.$$130 mul_expr 
	$$130: .    (130)

	.  reduce 130 (src line 876)

	$$130  goto 186

state 140
	add_expr:  add_expr '-'.$$132 mul_expr 
	$$132: .    (132)

	.  reduce 132 (src line 883)

	$$132  goto 187

state 141
	mul_expr:  mul_expr '*'.$$135 prefix_expr 
	$$135: .    (135)

	.  reduce 135 (src line 897)

	$$135  goto 188
